force-app/main/default/objects/Revision_Cita_Servicio__c/Revision_Cita_Servicio__c.object-meta.xml
<CustomObject>
    <description>Registro de cada revisión realizada durante una Cita de Servicio en campo. Almacena fotos, firma del cliente, formulario completado y datos del técnico.</description>
    <label>Revisión de Cita de Servicio</label>
    <nameField>
        <displayFormat>REV-{0000}</displayFormat>
        <label>Folio Revisión</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revisiones de Cita de Servicio</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>