force-app/main/default/objects/Revision_Cita_Servicio__c/fields/Cita_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Cita_Servicio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cita de Servicio</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Revisiones de Cita de Servicio</relationshipLabel>
    <relationshipName>Revisiones_Cita_Servicio</relationshipName>
    <type>Lookup</type>
</CustomField>