force-app/main/default/objects/Revision_Cita_Servicio__c/fields/Datos_Formulario__c.field-meta.xml
<CustomField>
    <fullName>Datos_Formulario__c</fullName>
    <label>Datos del Formulario</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>