force-app/main/default/objects/Revision_Cita_Servicio__c/fields/Fecha_Revision__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Revision__c</fullName>
    <label>Fecha de Revisión</label>
    <type>DateTime</type>
</CustomField>