force-app/main/default/objects/Revision_Cita_Servicio__c/fields/Numero_Revision__c.field-meta.xml
<CustomField>
    <fullName>Numero_Revision__c</fullName>
    <label>Número de Revisión</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>