force-app/main/default/objects/Revision_Cita_Servicio__c/fields/Plantilla_de_Formulario__c.field-meta.xml
<CustomField>
    <fullName>Plantilla_de_Formulario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plantilla de Formulario</label>
    <referenceTo>Form_Template__c</referenceTo>
    <relationshipLabel>Revisiones de Cita de Servicio</relationshipLabel>
    <relationshipName>Revisiones_de_Cita_de_Servicio</relationshipName>
    <type>Lookup</type>
</CustomField>