force-app/main/default/objects/Revision_Cita_Servicio__c/fields/Tecnico__c.field-meta.xml
<CustomField>
    <fullName>Tecnico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Técnico</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Revisiones realizadas</relationshipLabel>
    <relationshipName>Revisiones_Realizadas</relationshipName>
    <type>Lookup</type>
</CustomField>