force-app/main/default/objects/Revision_Cita_Servicio__c/fields/Tiempo_En_Proceso_Segundos__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_En_Proceso_Segundos__c</fullName>
    <label>Tiempo En Proceso (seg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>