force-app/main/default/objects/Revision_Cita_Servicio__c/fields/Tiempo_Pausado_Segundos__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_Pausado_Segundos__c</fullName>
    <label>Tiempo Pausado (seg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>