force-app/main/default/objects/Revision_Cita_Servicio__c/fields/Tipo_Reporte__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Reporte__c</fullName>
    <label>Tipo de Reporte</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bioenzmático</fullName>
            </value>
            <value>
                <fullName>Limpieza de Trampa</fullName>
            </value>
            <value>
                <fullName>Recolección de Grasa</fullName>
            </value>
            <value>
                <fullName>Íntima</fullName>
            </value>
            <value>
                <fullName>Desazolve</fullName>
            </value>
            <value>
                <fullName>Ductos</fullName>
            </value>
            <value>
                <fullName>Aplicación de retardante</fullName>
            </value>
            <value>
                <fullName>PLOM</fullName>
            </value>
            <value>
                <fullName>Aromatizante</fullName>
            </value>
            <value>
                <fullName>Bacter</fullName>
                <label>Bacter (Bactereo)</label>
            </value>
            <value>
                <fullName>Filtros</fullName>
            </value>
            <value>
                <fullName>Limpieza</fullName>
            </value>
            <value>
                <fullName>Control de Plaga</fullName>
            </value>
            <value>
                <fullName>Instalación</fullName>
            </value>
            <value>
                <fullName>Elcla</fullName>
            </value>
            <value>
                <fullName>Entrega</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>