force-app/main/default/objects/Revision_Cita_Servicio__c/fields/Ultima_Transicion__c.field-meta.xml
<CustomField>
    <fullName>Ultima_Transicion__c</fullName>
    <label>Última Transición</label>
    <type>DateTime</type>
</CustomField>