force-app/main/default/objects/Revision_Cita_Servicio__c/validationRules/No_Cambiar_Plantilla_Si_Contestada.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Cambiar_Plantilla_Si_Contestada</fullName>
    <active>true</active>
    <description>Impide cambiar la Plantilla de Formulario si el formulario ya fue contestado o la revisión está completada.</description>
    <errorConditionFormula>AND(
    ISCHANGED(Plantilla_de_Formulario__c),
    OR(
        NOT(ISBLANK(Datos_Formulario__c)),
        ISPICKVAL(Status__c, &quot;Completada&quot;)
    )
)</errorConditionFormula>
    <errorDisplayField>Plantilla_de_Formulario__c</errorDisplayField>
    <errorMessage>No se puede cambiar la Plantilla de Formulario porque el formulario ya fue contestado.</errorMessage>
</ValidationRule>