force-app/main/default/objects/Revision_Cita_Servicio__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Plantilla_de_Formulario__c</columns>
    <columns>Tipo_Reporte__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Cita_Servicio__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>